# capnproto-rust

./: Cargo.toml  check.sh  regenerate-json-schema-code.sh  regenerate-rust-schema-code.sh
capnp/: future_changelog.md
capnp-json/: Cargo.toml
capnp-json/src/: deserialize.rs  json_capnp.rs  lib.rs  serialize.rs  typescript.rs
capnp-json/test/: Cargo.toml
capnp-json/test/src/: lib.rs
capnp-rpc/src/: rpc.rs
capnp/src/: lib.rs  message.rs  rust_capnp.rs  schema.rs
capnpc/: rust.capnp
capnpc/src/: codegen.rs
capnpc/test/: Cargo.toml  build.rs  test-external.capnp  test.rs
capnpc/test-edition-2021/: build.rs
test-util/: Cargo.toml  build.rs  test.capnp
test-util/src/: lib.rs
